k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: food-admin
  namespace: food-delivery

spec:
  replicas: 2

  selector:
    matchLabels:
      app: food-admin

  template:
    metadata:
      labels:
        app: food-admin

    spec:
      containers:
        - name: food-admin
          image: food-admin:v1
          imagePullPolicy: Never

          ports:
            - containerPort: 80
