k8s/food-backend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: food-backend
  namespace: food-delivery

spec:
  replicas: 2

  selector:
    matchLabels:
      app: food-backend

  template:
    metadata:
      labels:
        app: food-backend

    spec:
      serviceAccountName: food-backend-sa

      containers:
        - name: food-backend
          image: food-backend:v3
          imagePullPolicy: Never

          ports:
            - containerPort: 4000

          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 20
