k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: food-frontend
  namespace: food-delivery

spec:
  replicas: 2

  selector:
    matchLabels:
      app: food-frontend

  template:
    metadata:
      labels:
        app: food-frontend

    spec:
      containers:
        - name: food-frontend
          image: food-frontend:v1
          imagePullPolicy: Never

          ports:
            - containerPort: 80
