k8s/admin-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: food-admin
  namespace: food-delivery

spec:
  selector:
    app: food-admin

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
