k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: food-backend
  namespace: food-delivery

spec:
  selector:
    app: food-backend

  ports:
    - port: 80
      targetPort: 4000

  type: ClusterIP
