k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: food-frontend
  namespace: food-delivery

spec:
  selector:
    app: food-frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
